--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ bin/
 *__pycache__/
 beyla.sln
 
-*_bpfel.go
-*_bpfel.o
+#*_bpfel.go
+#*_bpfel.o
 
 # Generated OBI test suite (created by scripts/generate-obi-tests.sh)
 internal/testgenerated
