--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ beyla.sln
 
 *_bpfel.go
 *_bpfel.o
+*_bpfel.go.d
 
 # Generated OBI test suite (created by scripts/generate-obi-tests.sh)
 internal/testgenerated
