--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,5 @@ vendor/** linguist-generated linguist-vendored
 *.pb.go linguist-generated
 *_grpc.pb.go linguist-generated
 third_party_licenses.csv linguist-generated
+
+.github/workflows/*.lock.yml linguist-generated=true merge=ours
