--- a/.github/workflows/pull_request_test_docker_build.yml
+++ b/.github/workflows/pull_request_test_docker_build.yml
@@ -3,12 +3,16 @@ on:
   pull_request:
     branches: ["main", "release-*"]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
 
 jobs:
   build:
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ${{ matrix.runner }}
     permissions:
       contents: read
       # required for DockerHub access
@@ -16,8 +20,19 @@ jobs:
 
     strategy:
       matrix:
-        platform: [linux/amd64] # linux/arm64 is too slow on GitHub Actions.
-        file: [Dockerfile, k8scache.Dockerfile]
+        include:
+          - file: Dockerfile
+            platform: linux/amd64
+            runner: ubuntu-latest-8-cores
+          - file: Dockerfile
+            platform: linux/arm64
+            runner: ubuntu-24.04-arm
+          - file: k8scache.Dockerfile
+            platform: linux/amd64
+            runner: ubuntu-latest-8-cores
+          - file: k8scache.Dockerfile
+            platform: linux/arm64
+            runner: ubuntu-24.04-arm
 
     steps:
       - id: checkout
@@ -30,13 +45,13 @@ jobs:
         if: github.repository == 'grafana/beyla' && (github.event_name != 'pull_request' || !github.event.pull_request.head.repo.fork)
         uses: grafana/shared-workflows/actions/dockerhub-login@775874934ae5e0adbc55b3e7d3571d140bcc7886
 
-      - id: docker-build-beyla
-        uses: grafana/shared-workflows/actions/build-push-to-dockerhub@775874934ae5e0adbc55b3e7d3571d140bcc7886 # main
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
+
+      - name: Build
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: .
-          file: ${{ matrix.file }}
-          platforms: |-
-            ${{ matrix.platform }}
-          tags: |-
-            "pr-test"
+          file: ./${{ matrix.file }}
           push: false
+          platforms: ${{ matrix.platform }}
