ci: pass token to create pr action

--- a/.github/workflows/bot_sync-obi-submodule.yml
+++ b/.github/workflows/bot_sync-obi-submodule.yml
@@ -66,9 +66,8 @@ jobs:
 
       - name: Create/update PR
         uses: peter-evans/create-pull-request@c0f553fe549906ede9cf27b5156039d195d2ece0 # v8.1.0
-        env:
-          GITHUB_TOKEN: ${{ steps.get-github-app-token.outputs.token }}
         with:
+          token: ${{ steps.get-github-app-token.outputs.token }}
           commit-message: "Update OBI submodule to ${{ steps.obi-sha.outputs.sha }}"
           title: "Update OBI submodule to ${{ steps.obi-sha.outputs.sha }}"
           body: |
