--- a/.github/workflows/agent_fix-obi.yml
+++ b/.github/workflows/agent_fix-obi.yml
@@ -19,10 +19,10 @@ jobs:
       github.event.pull_request.head.repo.id == github.repository_id
     runs-on: ubuntu-latest
     permissions:
-      contents: write          # Push fixes to PR branch via commit signing API
-      pull-requests: write     # Post PR comments with analysis and findings
-      issues: read             # Read issue/PR metadata for context
-      id-token: write          # OIDC token exchange for Vault and GitHub App token
+      contents: write # Push fixes to PR branch via commit signing API
+      pull-requests: write # Post PR comments with analysis and findings
+      issues: read # Read issue/PR metadata for context
+      id-token: write # OIDC token exchange for Vault and GitHub App token
     timeout-minutes: 20
     steps:
       - name: Checkout repository
@@ -77,12 +77,12 @@ jobs:
           # inspection commands that per-subcommand patterns would miss.
           # Destructive git ops are blocked by the prompt, not the allow list.
           claude_args: >-
-            --max-turns 30
+            --max-turns 100
             --allowedTools
             "Bash(cat:*),Bash(date:*),Bash(echo:*),Bash(gh:*),
-            Bash(git:*),Bash(go:*),Bash(grep:*),Bash(head:*),Bash(ls:*),
-            Bash(make:*),Bash(pwd:*),Bash(sort:*),Bash(tail:*),
-            Bash(uniq:*),Bash(wc:*),
+            Bash(git:*),Bash(go:*),Bash(grep:*),Bash(head:*),Bash(jq:*),
+            Bash(ls:*),Bash(make:*),Bash(python3:*),Bash(pwd:*),
+            Bash(sort:*),Bash(tail:*),Bash(uniq:*),Bash(wc:*),
             Edit,MultiEdit,Glob,Grep,LS,Read,Write,Task,TodoWrite,
             mcp__github_file_ops__commit_changes,
             mcp__github_file_ops__create_or_update_file"
