--- a/.github/workflows/agent_fix-obi.yml
+++ b/.github/workflows/agent_fix-obi.yml
@@ -11,19 +11,18 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  fix-obi:
-    name: Analyze and fix OBI CI failure
+  triage:
+    name: Triage CI failures
     if: >
       github.event.action == 'labeled' &&
       github.event.label.name == 'agent/fix-obi' &&
       github.event.pull_request.head.repo.id == github.repository_id
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Push fixes to PR branch via commit signing API
-      pull-requests: write # Post PR comments with analysis and findings
-      issues: read # Read issue/PR metadata for context
-      id-token: write # OIDC token exchange for Vault and GitHub App token
-    timeout-minutes: 20
+      contents: write
+      pull-requests: write
+      id-token: write
+    timeout-minutes: 15
     steps:
       - name: Checkout repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -31,6 +30,15 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
           submodules: recursive
           persist-credentials: false
+
+      - name: Set up Go
+        uses: actions/setup-go@40f1582b2485089dde7abd97c1529aa768e1baff # v5.6.0
+        with:
+          go-version-file: go.mod
+          cache: false
+
+      - name: Generate files
+        run: make prereqs vendor-obi
 
       - name: Get vault secrets
         uses: grafana/shared-workflows/actions/get-vault-secrets@f1614b210386ac420af6807a997ac7f6d96e477a # get-vault-secrets/v1.3.1
@@ -44,40 +52,199 @@ jobs:
         with:
           github_app: grafana-beyla-bot
 
+      - name: Run Claude Code – Triage
+        uses: anthropics/claude-code-action@edd85d61533cbba7b57ed0ca4af1750b1fdfd3c4 # v1.0.55
+        with:
+          anthropic_api_key: ${{ env.ANTHROPIC_API_KEY }}
+          github_token: ${{ steps.get-github-app-token.outputs.token }}
+          label_trigger: agent/fix-obi
+          use_sticky_comment: "true"
+          use_commit_signing: "false"
+          claude_args: >-
+            --max-turns 40
+            --allowedTools
+            "Bash(cat:*),Bash(gh:*),Bash(grep:*),Bash(head:*),Bash(jq:*),
+            Bash(ls:*),Bash(tail:*),Bash(wc:*),
+            Glob,Grep,LS,Read,Write,Task,TodoWrite"
+          prompt: |
+            # Triage – extract CI failure clues only
+
+            **Triggering PR**: #${{ github.event.pull_request.number }} — "${{ github.event.pull_request.title }}"
+            **Repository**: beyla. OBI submodule is in `.obi-src`.
+
+            Your only job is to gather failure information for the next step. Do **not** make code changes or attempt to fix anything.
+
+            1. Use `gh` to list failed workflow runs and checks for this PR. Identify which jobs failed.
+            2. For each failing check, get the logs efficiently: use `gh run view` / `gh run download` or equivalent. Logs are large — use **grep**, **tail**, **head** to extract error messages and stack traces. Do not load entire log files into context.
+            3. If failing jobs produce artifacts, download them and inspect only what you need (again: grep/tail/head; artifacts often contain large logs — stay efficient).
+            4. Write a single file **`triage.md`** in the repository root with:
+               - For each failing check: name, workflow/job, and extracted error messages or clues with enough context to understand what went wrong.
+               - One short section per failure; keep each section focused.
+
+            Output: **only** create/update **`triage.md`**. No other file changes. Focus on efficient tool use and minimal turns.
+        env:
+          DISABLE_TELEMETRY: "1"
+          DISABLE_ERROR_REPORTING: "1"
+
+      - name: Upload triage artifact
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: triage
+          path: triage.md
+          if-no-files-found: error
+
+  plan:
+    name: Plan fixes
+    needs: triage
+    if: >
+      github.event.action == 'labeled' &&
+      github.event.label.name == 'agent/fix-obi' &&
+      github.event.pull_request.head.repo.id == github.repository_id
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      id-token: write
+    timeout-minutes: 15
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          submodules: recursive
+          persist-credentials: false
+
       - name: Set up Go
         uses: actions/setup-go@40f1582b2485089dde7abd97c1529aa768e1baff # v5.6.0
         with:
           go-version-file: go.mod
           cache: false
 
-      - name: Run Claude Code
+      - name: Generate files
+        run: make prereqs vendor-obi
+
+      - name: Download triage artifact
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+        with:
+          name: triage
+
+      - name: Get vault secrets
+        uses: grafana/shared-workflows/actions/get-vault-secrets@f1614b210386ac420af6807a997ac7f6d96e477a # get-vault-secrets/v1.3.1
+        with:
+          repo_secrets: |
+            ANTHROPIC_API_KEY=anthropic-token:token
+
+      - name: Get GitHub App token
+        id: get-github-app-token
+        uses: grafana/shared-workflows/actions/create-github-app-token@580590a644e82e79bb2598bdaba0be245a14dda0 # create-github-app-token/v0.2.2
+        with:
+          github_app: grafana-beyla-bot
+
+      - name: Run Claude Code – Plan
         uses: anthropics/claude-code-action@edd85d61533cbba7b57ed0ca4af1750b1fdfd3c4 # v1.0.55
         with:
           anthropic_api_key: ${{ env.ANTHROPIC_API_KEY }}
-          # Custom GitHub App token bypasses the built-in Claude Code GitHub
-          # App OIDC exchange (which requires installing github.com/apps/claude).
           github_token: ${{ steps.get-github-app-token.outputs.token }}
-          # label_trigger tells the action to only activate when this specific
-          # label is added. The workflow on.pull_request.types:[labeled] fires
-          # for any label; the job if: and label_trigger both filter to our label.
           label_trigger: agent/fix-obi
           use_sticky_comment: "true"
-          # Enable commit signing so Claude can push fixes to the PR branch
-          # directly via the GitHub API (no persist-credentials needed).
-          use_commit_signing: "true"
-          # Tool permissions via --allowedTools using Bash(cmd:*) glob syntax.
-          # The :* suffix is required — without it the SDK treats the pattern
-          # as a literal tool name and denies every Bash call.  Tag mode's own
-          # patterns use this same Bash(cmd:*) convention.
-          #
-          # Settings permissions.allow was tried but does not take effect when
-          # running via the Agent SDK's non-interactive query() path.
-          #
-          # Bash(git:*) covers "git -C .obi-src log …" and similar submodule
-          # inspection commands that per-subcommand patterns would miss.
-          # Destructive git ops are blocked by the prompt, not the allow list.
+          use_commit_signing: "false"
           claude_args: >-
-            --max-turns 100
+            --max-turns 35
+            --allowedTools
+            "Bash(cat:*),Bash(git:*),Bash(ls:*),Bash(pwd:*),
+            Glob,Grep,LS,Read,Write,Task,TodoWrite"
+          prompt: |
+            # Plan – resolve CI failures (no code changes)
+
+            **Triggering PR**: #${{ github.event.pull_request.number }} — "${{ github.event.pull_request.title }}"
+
+            Your only job is to produce a concrete plan for the next step. Do **not** open large log files, re-run tests, or download CI artifacts. Use only:
+            - **triage.md** (in repo root) from the previous step
+            - **Source code** of Beyla and the `.obi-src` (OBI) submodule
+
+            Context (use when planning):
+            - **Generated tests**: `scripts/generate-obi-tests.sh` generates into `internal/testgenerated`. Do not plan edits to `internal/testgenerated`; plan script or extension changes instead.
+            - **Breaking changes** often need: `pkg/beyla/config.go`, Go symbol/API refactors, or semantic conventions changes.
+            - **Beyla/OBI**: See `scripts/generate-obi-tests.sh` (BEHAVIORAL_TRANSFORMS, CODE_INJECTIONS) for integration; fixes should be in Beyla only, not in `.obi-src`.
+
+            Write **`plan.md`** in the repository root with:
+            - Summary of failures (from triage.md).
+            - Ordered list of concrete changes (files, edits, or script updates) to fix them, in Beyla only. No OBI submodule edits.
+
+            Output: **only** create/update **`plan.md`**. No code changes.
+        env:
+          DISABLE_TELEMETRY: "1"
+          DISABLE_ERROR_REPORTING: "1"
+
+      - name: Upload plan artifact
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+        with:
+          name: plan
+          path: plan.md
+          if-no-files-found: error
+
+  implement:
+    name: Implement and push
+    needs: plan
+    if: >
+      github.event.action == 'labeled' &&
+      github.event.label.name == 'agent/fix-obi' &&
+      github.event.pull_request.head.repo.id == github.repository_id
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      id-token: write
+    timeout-minutes: 15
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          submodules: recursive
+          persist-credentials: false
+
+      - name: Set up Go
+        uses: actions/setup-go@40f1582b2485089dde7abd97c1529aa768e1baff # v5.6.0
+        with:
+          go-version-file: go.mod
+          cache: false
+
+      - name: Generate files
+        run: make prereqs vendor-obi
+
+      - name: Download triage artifact
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+        with:
+          name: triage
+
+      - name: Download plan artifact
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+        with:
+          name: plan
+
+      - name: Get vault secrets
+        uses: grafana/shared-workflows/actions/get-vault-secrets@f1614b210386ac420af6807a997ac7f6d96e477a # get-vault-secrets/v1.3.1
+        with:
+          repo_secrets: |
+            ANTHROPIC_API_KEY=anthropic-token:token
+
+      - name: Get GitHub App token
+        id: get-github-app-token
+        uses: grafana/shared-workflows/actions/create-github-app-token@580590a644e82e79bb2598bdaba0be245a14dda0 # create-github-app-token/v0.2.2
+        with:
+          github_app: grafana-beyla-bot
+
+      - name: Run Claude Code – Implement
+        uses: anthropics/claude-code-action@edd85d61533cbba7b57ed0ca4af1750b1fdfd3c4 # v1.0.55
+        with:
+          anthropic_api_key: ${{ env.ANTHROPIC_API_KEY }}
+          github_token: ${{ steps.get-github-app-token.outputs.token }}
+          label_trigger: agent/fix-obi
+          use_sticky_comment: "true"
+          use_commit_signing: "true"
+          claude_args: >-
+            --max-turns 60
             --allowedTools
             "Bash(cat:*),Bash(date:*),Bash(echo:*),Bash(gh:*),
             Bash(git:*),Bash(go:*),Bash(grep:*),Bash(head:*),Bash(jq:*),
@@ -87,48 +254,23 @@ jobs:
             mcp__github_file_ops__commit_changes,
             mcp__github_file_ops__create_or_update_file"
           prompt: |
-            # Fix OBI submodule CI
+            # Implement – fix OBI CI (Beyla only)
 
-            You are analyzing a CI failure on an OBI submodule update PR in the Beyla repository.
+            **Triggering PR**: #${{ github.event.pull_request.number }} — "${{ github.event.pull_request.title }}"
 
-            ## Context
+            Your only job is to implement the plan and push. Do **not** re-open large log files, re-download CI artifacts, or run the full test suite. Use only:
+            - **plan.md** (in repo root) from the previous step
+            - If you need extra context: **triage.md** from the first step
+            - Source code as needed
 
-            - **Triggering PR**: #${{ github.event.pull_request.number }} — "${{ github.event.pull_request.title }}"
-            - **Repository**: This repo (beyla). The OBI submodule is in `.obi-src` and is updated by the "Update OBI submodule" workflow (`bot_sync-obi-submodule.yml`), which can fail when upstream introduces breaking changes.
-            - **Submodule checkout**: The `.obi-src` submodule has already been checked out recursively. If you need to re-init it, run `git submodule update --init --recursive .obi-src`.
+            Instructions:
+            1. Read **plan.md** and implement every item in Beyla only. Do **not** change the OBI submodule (`.obi-src/`).
+            2. Do not modify **`internal/testgenerated`** — it is generated; change the script or extensions instead.
+            3. After editing, run **`make fmt lint`** (or at least **`make lint`**) as a quick static check.
+            4. Commit your changes and push to this PR branch using the commit signing API (no local git push). Post a concise PR comment: what failed, what you changed (file/line if useful), and what was committed and pushed.
 
-            ## Beyla/OBI integration
-
-            - **Generated tests**: `scripts/generate-obi-tests.sh` runs as part of `make vendor-obi`. It copies, transforms, and merges the OBI test suites with `internal/test/beyla_extensions` into `internal/testgenerated`. **Do not modify files in `internal/testgenerated`** — they are regenerated; change the script or source extensions instead.
-            - **Where breaking changes usually land**: OBI introduces breaking changes regularly. These typically require:
-              - **Config**: updates in `pkg/beyla/config.go` (and related OBI override logic).
-              - **Go symbols**: refactoring to match OBI API/package changes.
-            - **Go version and obi-generator**: If the Go version has been upgraded (e.g. in OBI or in Beyla's tooling), a **new version of the obi-generator** may be required. The image is set in the root **`Dockerfile`** via `ARG GEN_IMG` (lines 2–3). The Go version used by the obi-generator is likely defined in **`.obi-src/generator.Dockerfile`** (base image, lines 1–2). Align the obi-generator image with the Go version used for the build/tests.
-            - **Static check**: After making changes, run **`make fmt lint`** (or at least **`make lint`**). It must pass as a basic first static check.
-            - **Porting from OBI**: Other breakages visible in CI logs should be ported from OBI into Beyla (Beyla follows a similar code structure). Make changes in the context of the Beyla repo and follow Beyla-specific naming. Inspect Beyla/OBI differences documented in `scripts/generate-obi-tests.sh`: **BEHAVIORAL_TRANSFORMS** (env renames, identity, paths; around lines 63–64) and **CODE_INJECTIONS** (path setup, config overrides; around lines 120–121). Consider whether `scripts/generate-obi-tests.sh` needs updating so that it still produces idempotent output for other developers cloning Beyla with the OBI submodule, or whether OBI has drifted so that the transforms and injections need to be updated to match.
-            - **CI vs local**: The CI test suite runs multiple long-running workflows on Linux (ARM and x86) with BPF. You may not be able to reproduce complex failures locally. **Rely on the CI logs** rather than re-running the full test suite locally (tests are slow and often need nested virtualization via QEMU, kind clusters, etc.). If needed, run **`make fmt lint`** as a quick static check; only run a single unit test if absolutely necessary. Integration tests are unlikely to complete without an appropriate environment — rely heavily on CI logs and on the **git history of the `.obi-src` submodule** to infer what needs to be ported into Beyla.
-
-            ## Your task
-
-            1. **Understand the failure**: Read the triggering PR's title, body, labels, and recent workflow runs. Use `gh` CLI to list failed workflow runs and download logs. Identify which jobs failed and why (e.g. build, tests, vendoring). Prefer CI logs over local reproduction.
-
-            2. **Inspect the codebase**: Ensure `.obi-src` is present — if it is missing or empty, run `git submodule update --init --recursive .obi-src`. Then run `make fmt lint` as a quick static check; run a single unit test only if necessary. Do not attempt to run the full integration test suite locally.
-
-            3. **Implement a fix**: Based on the failure, implement a minimal fix. Prefer:
-               - Code or config changes in this repo (outside `.obi-src`) to adapt to OBI changes — especially `pkg/beyla/config.go` and Go symbol refactoring; do not edit `internal/testgenerated` (see Beyla/OBI integration above). If the failure points to test or transform drift, consider updating `scripts/generate-obi-tests.sh`.
-               - If you cannot fix without changing `.obi-src`, describe the required upstream change and add a comment on the PR with your findings and a concrete suggestion (branch/commit to use, or a patch idea).
-               - Use the Edit/Write tools to make changes. The workflow will commit and push them to this PR branch automatically so CI can re-run.
-
-            4. **Respond on the PR**: Post a concise summary:
-               - What failed and why.
-               - What you changed (with file/line references if applicable).
-               - What was committed and pushed, or what still needs manual intervention.
-
-            ## Safety constraints
-
-            - You have **read-only** git access (log, diff, show, status). Do NOT attempt git push, git reset, git checkout, or any destructive git operations.
-            - Do not modify files in `.obi-src/` — this is a submodule managed upstream.
-            - Do not force-push or overwrite the submodule commit.
+            Safety:
+            - Read-only git for inspect; use the provided tools to commit and push. Do not force-push or overwrite the submodule commit.
             - Prefer fixes in the Beyla tree that work with the current OBI submodule commit.
         env:
           DISABLE_TELEMETRY: "1"
