--- a/internal/test/integration/compose/docker-compose-process.yml
+++ b/internal/test/integration/compose/docker-compose-process.yml
@@ -53,7 +53,7 @@ services:
   # OpenTelemetry Collector for Metrics. For Traces, we use directly Jaeger
   otelcol:
     image: otel/opentelemetry-collector-contrib:0.104.0@sha256:e07e325e303e86f4a87a617491e921b579a92da6d404007394757ac910bf9587
-    container_name: otel-col
+    container_name: otelcol
     deploy:
       resources:
         limits:
