--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -46,7 +46,7 @@ permissions:
 jobs:
   test-matrix:
     name: "Build ARM integration matrix"
-    runs-on: ubuntu-x64
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     outputs:
       matrix: ${{ steps.build-matrix.outputs.matrix }}
@@ -71,7 +71,7 @@ jobs:
   test:
     name: ${{ matrix.description }}
     needs: test-matrix
-    runs-on: ubuntu-arm64
+    runs-on: ubuntu-24.04-arm
     timeout-minutes: 30
     # Grant specific permissions needed only for this job
     permissions:
