--- a/.github/workflows/publish_dockerhub_release.yml
+++ b/.github/workflows/publish_dockerhub_release.yml
@@ -21,22 +21,22 @@ jobs:
           - image: grafana/beyla
             file: Dockerfile
             platform: linux/amd64
-            runner: ubuntu-x64
+            runner: ubuntu-latest
             artifact_suffix: beyla-amd64
           - image: grafana/beyla
             file: Dockerfile
             platform: linux/arm64
-            runner: ubuntu-arm64
+            runner: ubuntu-24.04-arm
             artifact_suffix: beyla-arm64
           - image: grafana/beyla-k8s-cache
             file: k8scache.Dockerfile
             platform: linux/amd64
-            runner: ubuntu-x64
+            runner: ubuntu-latest
             artifact_suffix: k8s-cache-amd64
           - image: grafana/beyla-k8s-cache
             file: k8scache.Dockerfile
             platform: linux/arm64
-            runner: ubuntu-arm64
+            runner: ubuntu-24.04-arm
             artifact_suffix: k8s-cache-arm64
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
@@ -76,7 +76,7 @@ jobs:
 
   create-manifest:
     needs: build
-    runs-on: ubuntu-x64
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       # required for DockerHub access
