--- a/.github/workflows/pull_request_k8s_integration_tests.yml
+++ b/.github/workflows/pull_request_k8s_integration_tests.yml
@@ -45,7 +45,7 @@ permissions:
 jobs:
   test-matrix:
     name: "Build integration k8s matrix"
-    runs-on: ubuntu-x64
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     outputs:
       matrix: ${{ steps.build-matrix.outputs.matrix }}
@@ -67,7 +67,7 @@ jobs:
   test:
     name: ${{ matrix.basename }}
     needs: test-matrix
-    runs-on: ubuntu-x64
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     # Grant specific permissions needed only for this job
     permissions:
