--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -30,7 +30,7 @@ permissions:
 jobs:
   vm-test-matrix:
     name: "Build VM integration matrix"
-    runs-on: ubuntu-x64
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     outputs:
       matrix: ${{ steps.build-matrix.outputs.matrix }}
@@ -71,7 +71,7 @@ jobs:
       checks: write
       # Required for uploading artifacts
       actions: write
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
